--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,6 @@
     "tsaikd <tsaikd@gmail.com>"
   ],
   "description": "Simple Docker Web UI",
-  "main": "index.html",
   "keywords": [
     "Docker"
   ],
@@ -19,5 +18,8 @@
     "angular-ui-bootstrap-bower": ">=0",
     "angular-websocket": ">=0",
     "term.js": ">=0"
-  }
+  },
+  "main": [
+    "index.html"
+  ]
 }
