--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "grunt-contrib-cssmin": ">=0",
     "grunt-contrib-uglify": ">=0",
     "grunt-usemin": ">=2",
+    "grunt-sync-pkg": ">=0",
     "load-grunt-tasks": ">=0"
   },
   "author": "tsaikd <tsaikd@gmail.com>",
   "license": "LGPLv3",
-  "homepage": "https://github.com/tsaikd/kdocker-web"
+  "homepage": "https://github.com/tsaikd/kdocker-web",
+  "main": "index.html"
 }
