--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "grunt-contrib-cssmin": ">=0",
     "grunt-contrib-uglify": ">=0",
     "grunt-usemin": ">=2",
+    "grunt-angular-templates": ">=0",
     "grunt-sync-pkg": ">=0",
     "load-grunt-tasks": ">=0"
   },
