--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "grunt-contrib-concat": ">=0",
     "grunt-contrib-cssmin": ">=0",
     "grunt-contrib-uglify": ">=0",
+    "grunt-version": ">=0",
     "grunt-usemin": ">=2",
     "grunt-angular-templates": ">=0",
     "grunt-sync-pkg": ">=0",
