--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "grunt-contrib-concat": ">=0",
     "grunt-contrib-cssmin": ">=0",
     "grunt-contrib-uglify": ">=0",
+    "grunt-contrib-connect": ">=0",
+    "grunt-contrib-watch": ">=0",
+    "connect-livereload": ">=0",
     "grunt-version": ">=0",
     "grunt-usemin": ">=2",
     "grunt-angular-templates": ">=0",
@@ -18,5 +21,9 @@
   "author": "tsaikd <tsaikd@gmail.com>",
   "license": "LGPLv3",
   "homepage": "https://github.com/tsaikd/kdocker-web",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/tsaikd/kdocker-web"
+  },
   "main": "index.html"
 }
