--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "kdocker-web",
   "version": "0.1.3",
-  "homepage": "https://github.com/tsaikd/kdocker-web",
+  "homepage": "http://tsaikd.github.io/kdocker-web/",
   "authors": [
     "tsaikd <tsaikd@gmail.com>"
   ],
