--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "grunt-sync-pkg": ">=0",
     "load-grunt-tasks": ">=0"
   },
-  "author": "tsaikd <tsaikd@gmail.com>",
+  "authors": [
+    "tsaikd <tsaikd@gmail.com>"
+  ],
   "license": "LGPLv3",
-  "homepage": "https://github.com/tsaikd/kdocker-web/",
+  "homepage": "http://tsaikd.github.io/kdocker-web/",
   "repository": {
     "type": "git",
     "url": "https://github.com/tsaikd/kdocker-web/"
