--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "grunt-contrib-clean": ">=0",
     "grunt-contrib-copy": ">=0",
     "grunt-contrib-concat": ">=0",
+    "grunt-contrib-sass": ">=0",
     "grunt-contrib-cssmin": ">=0",
     "grunt-contrib-uglify": ">=0",
     "grunt-contrib-connect": ">=0",
