--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,7 @@
     "angular-translate": ">=2",
     "angular-local-storage": null,
     "angular-ui-bootstrap-bower": ">=0",
-    "term.js": ">=0"
+    "xterm.js": ">=0"
   },
   "main": [
     "index.html"
