--- a/package.json
+++ b/package.json
@@ -3,21 +3,21 @@
   "version": "0.1.13-10",
   "description": "Simple Docker Web UI",
   "devDependencies": {
-    "grunt": ">=0",
-    "grunt-contrib-clean": ">=0",
-    "grunt-contrib-copy": ">=0",
-    "grunt-contrib-concat": ">=0",
-    "grunt-contrib-sass": ">=0",
-    "grunt-contrib-cssmin": ">=0",
-    "grunt-contrib-uglify": ">=0",
-    "grunt-contrib-connect": ">=0",
-    "grunt-contrib-watch": ">=0",
-    "connect-livereload": ">=0",
-    "grunt-version": ">=0",
-    "grunt-usemin": ">=2",
-    "grunt-angular-templates": ">=0",
-    "grunt-sync-pkg": ">=0",
-    "load-grunt-tasks": ">=0"
+    "dateformat": ">=0",
+    "gulp": ">=0",
+    "gulp-sync": ">=0",
+    "gulp-concat": ">=0",
+    "gulp-rename": ">=0",
+    "gulp-header": ">=0",
+    "gulp-sass": ">=0",
+    "gulp-base64": ">=0",
+    "gulp-angular-templatecache": ">=0",
+    "gulp-usemin": ">=0",
+    "gulp-uglify": ">=0",
+    "gulp-minify-css": ">=0",
+    "gulp-minify-html": ">=0",
+    "gulp-replace": ">=0",
+    "gulp-connect": ">=0"
   },
   "authors": [
     "tsaikd <tsaikd@gmail.com>"
