--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,9 @@
     "angular-ui-bootstrap-bower": ">=0",
     "xterm.js": ">=0"
   },
+  "devDependencies": {
+    "angular-mocks": ">=1.2"
+  },
   "main": [
     "index.html"
   ]
