--- a/package.json
+++ b/package.json
@@ -17,7 +17,12 @@
     "gulp-minify-css": ">=0",
     "gulp-minify-html": ">=0",
     "gulp-replace": ">=0",
-    "gulp-connect": ">=0"
+    "gulp-connect": ">=0",
+    "gulp-jasmine": ">=0",
+    "gulp-karma": ">=0",
+    "karma": ">=0",
+    "karma-jasmine": ">=0",
+    "karma-phantomjs-launcher": ">=0"
   },
   "authors": [
     "tsaikd <tsaikd@gmail.com>"
