--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "gulp-sass": ">=0",
     "gulp-base64": ">=0",
     "gulp-angular-templatecache": ">=0",
-    "gulp-usemin": ">=0",
+    "gulp-usemin": "tsaikd/gulp-usemin",
     "gulp-uglify": ">=0",
     "gulp-minify-css": ">=0",
     "gulp-minify-html": ">=0",
